fix: Make the left side form area fully stretch

--- a/src/pages/home-screen/styles.css
+++ b/src/pages/home-screen/styles.css
@@ -1,7 +1,7 @@
 .app {
     height: 100vh;
     flex-direction: column;
-    background-color: lightblue;
+    background-color: rgb(180, 180, 180);
     display: flex;
     flex-direction: column;
   }
@@ -18,7 +18,6 @@
   .resumeScrollAndMenuContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     flex: 1;
     overflow-y: auto;
     -ms-overflow-style: none;
